src/test/ui/associated-types/hr-associated-type-bound-param-5.stderr
error[E0277]: the trait bound `str: std::clone::Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-5.rs:26:14
   |
LL | trait X<'a, T: Cycle + for<'b> X<'b, T>>
   |       - required by a bound in this
LL | where
LL |     for<'b> <T as X<'b, T>>::U: Clone,
   |                                 ----- required by this bound in `X`
...
LL |     type U = str;
   |              ^^^ the trait `std::clone::Clone` is not implemented for `str`

error[E0277]: the trait bound `str: std::clone::Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-5.rs:31:14
   |
LL | trait X<'a, T: Cycle + for<'b> X<'b, T>>
   |       - required by a bound in this
LL | where
LL |     for<'b> <T as X<'b, T>>::U: Clone,
   |                                 ----- required by this bound in `X`
...
LL |     type U = str;
   |              ^^^ the trait `std::clone::Clone` is not implemented for `str`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
